force-app/main/default/objects/KimbleOne__ResourceCapability__c/KimbleOne__ResourceCapability__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Resource Capability</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ResourceCapability Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Capabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>