force-app/main/default/objects/KimbleOne__ResourceCapability__c/fields/KimbleOne__CapabilityType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CapabilityType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capability Type</label>
    <referenceTo>KimbleOne__CapabilityType__c</referenceTo>
    <relationshipLabel>Resource Capabilities</relationshipLabel>
    <relationshipName>ResourceCapabilities</relationshipName>
    <type>Lookup</type>
</CustomField>