force-app/main/default/objects/KimbleOne__ResourceCapability__c/fields/KimbleOne__IsTarget__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Learning Objective</label>
    <type>Checkbox</type>
</CustomField>