force-app/main/default/objects/KimbleOne__ResourceCapability__c/fields/KimbleOne__SelfBooleanRating__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SelfBooleanRating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Rating</label>
    <type>Checkbox</type>
</CustomField>