force-app/main/default/objects/KimbleOne__ResourceCapability__c/fields/KimbleOne__SelfNumericRating__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SelfNumericRating__c</fullName>
    <label>Self Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>