force-app/main/default/objects/KimbleOne__ResourceCapability__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__CapabilityType__c</columns>
    <columns>KimbleOne__ExpiryDate__c</columns>
    <columns>KimbleOne__NumericRating__c</columns>
    <columns>KimbleOne__SelfNumericRating__c</columns>
    <columns>KimbleOne__Resource__c</columns>
    <columns>KimbleOne__BooleanRating__c</columns>
    <columns>KimbleOne__SelfBooleanRating__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>